[workspace]
resolver = "2"
members = [
    # core ibc implementation
    "ibc/derive",
    "ibc/modules",
    "ibc/proto",
    "ibc/proto-compiler",

    # ibc contracts for different blockchain runtimes
    "contracts/pallet-ibc/ping",
    "contracts/pallet-ibc/primitives",
    "contracts/pallet-ibc/rpc",
    "contracts/pallet-ibc/runtime-api",
    "contracts/pallet-ibc",
    "contracts/pallet-ibc/simple-iavl",

    # algorithms
    "algorithms/beefy/verifier",
    "algorithms/beefy/prover",
    "algorithms/beefy/primitives",
    "algorithms/grandpa/verifier",
    "algorithms/grandpa/prover",
    "algorithms/grandpa/primitives",

    # ibc light clients
    "light-clients/common",
    "light-clients/ics07-tendermint",
    "light-clients/ics07-tendermint-cw",
    "light-clients/ics08-wasm",
    "light-clients/ics10-grandpa",
    "light-clients/ics10-grandpa-cw",
    "light-clients/ics10-grandpa-standalone",
    "light-clients/ics11-beefy",
    "light-clients/ics13-near",

    # hyperspace
    # "hyperspace",
    # "hyperspace/core",
    # "hyperspace/primitives",
    # "hyperspace/parachain",
    # "hyperspace/cosmos",
    # "hyperspace/testsuite",
    # "hyperspace/metrics",

    # utilities
    # "utils/subxt/codegen",
    # "utils/subxt/generated",
    # "utils/parachain-node",
    # "utils/parachain-node/runtime",
    # "utils/simnode"
]

[workspace.dependencies]

# Project dependencies
# IBC
ibc                                        = { path = "ibc/modules", features = [] }
ibc-proto                                  = { path = "ibc/proto" }
ibc-proto-compiler                         = { path = "ibc/proto-compiler" }
ibc-derive                                 = { path = "ibc/derive" }

# Contracts
ibc-rpc                                    = { path = "contracts/pallet-ibc/rpc" }
ibc-runtime-api                            = { path = "contracts/pallet-ibc/runtime-api" }
simple-iavl                                = { path = "contracts/pallet-ibc/simple-iavl" }
ibc-primitives                             = { path = "contracts/pallet-ibc/primitives" }
pallet-ibc                                 = { path = "contracts/pallet-ibc" }
pallet-ibc-ping                            = { path = "contracts/pallet-ibc/ping" }

# Light clients
ics11-beefy                                = { path = "light-clients/ics11-beefy" }
#ics13-near                                = { path = "light-clients/ics13-near" }
ics07-tendermint                           = { path = "light-clients/ics07-tendermint", features = ["std"] }
ics08-wasm                                 = { path = "light-clients/ics08-wasm", features = ["std"] }
light-client-common                        = { path = "light-clients/common" }
ics10-grandpa                              = { path = "light-clients/ics10-grandpa" }
ics10-grandpa-standalone                   = { path = "light-clients/ics10-grandpa-standalone" }

# Tendermint
ics23                                      = { git = "https://github.com/cosmos/ics23", rev = "74ce807b7be39a7e0afb4e2efb8e28a57965f57b", default-features = false }
tendermint-proto                           = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
tendermint                                 = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
tendermint-testgen                         = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1" }
tendermint-rpc                             = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
tendermint-light-client                    = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
tendermint-light-client-verifier           = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }

# Algorithms
grandpa-client-primitives                  = { package = "grandpa-light-client-primitives", path = "algorithms/grandpa/primitives", default-features = false }
beefy-client-primitives                    = { package = "beefy-light-client-primitives", path = "algorithms/beefy/primitives", default-features = false }
beefy-prover                               = { path = "algorithms/beefy/prover" }
beefy-light-client                         = { path = "algorithms/beefy/verifier" }
beefy-light-client-primitives              = { path = "algorithms/beefy/primitives" }
grandpa-prover                             = { path = "algorithms/grandpa/prover" }
grandpa-light-client-primitives            = { path = "algorithms/grandpa/primitives" }

# Hyperspace
# hyperspace-core                            = { path = "hyperspace/core", features = ["testing", "build-metadata-from-ws"] }
# hyperspace-primitives                      = { path = "hyperspace/primitives" }
# hyperspace-parachain                       = { path = "hyperspace/parachain" }
# hyperspace-cosmos                          = { path = "hyperspace/cosmos" }
# hyperspace-testsuite                       = { path = "hyperspace/testsuite" }
# hyperspace-metrics                         = { path = "hyperspace/metrics" }

# Subxt / utils
# subxt-generated                            = { path = "utils/subxt/generated" }
subxt                                      = { git = "https://github.com/paritytech/subxt",  tag = "v0.37.0", features = ["substrate-compat"] }
subxt-core                                 = { git = "https://github.com/paritytech/subxt",  tag = "v0.37.0", features = ["substrate-compat"] }
subxt-metadata                             = { git = "https://github.com/paritytech/subxt",  tag = "v0.37.0", features = ["substrate-compat"] }
scale-decode                               = { version = "0.13.0", default-features = false }
scale-encode                               = { version = "0.7.0", default-features = false }
scale-info                                 = { version = "2.11.0", default-features = false, features = ["derive"] }

# orml
# orml-tokens                                = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
# orml-traits                                = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
# orml-tokens                                = { version = "0.8.0" }
# orml-traits                                = { version = "0.8.0" }
# orml-asset-registry                        = { version = "0.8.0" }

# polkadot-sdk (wasm)
sp-mmr-primitives                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
cumulus-client-collator                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
cumulus-client-consensus-proposer          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
cumulus-pallet-aura-ext                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
cumulus-pallet-dmp-queue                   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
cumulus-pallet-parachain-system            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false, features = ["parameterized-consensus-hook"] }
cumulus-pallet-xcm                         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
cumulus-pallet-xcmp-queue                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
cumulus-primitives-core                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
cumulus-primitives-parachain-inherent      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
cumulus-primitives-timestamp               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
cumulus-primitives-utility                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
cumulus-test-relay-sproof-builder          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
cumulus-pallet-session-benchmarking        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
finality-grandpa                           = { version = "0.16.2", default-features = false }
frame-benchmarking                         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
frame-executive                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
frame-support                              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
frame-system                               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
frame-system-benchmarking                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
frame-system-rpc-runtime-api               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
frame-try-runtime                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
mmr-rpc                                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-assets                              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-aura                                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-authority-discovery                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-authorship                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-babe                                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-balances                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-bounties                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-beefy-mmr                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-collator-selection                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-collective                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-conviction-voting                   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-democracy                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-elections-phragmen                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-identity                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-im-online                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-indices                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-membership                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-message-queue                       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-multisig                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-mmr                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-preimage                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-proxy                               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-ranked-collective                   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-recovery                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-referenda                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-root-testing                        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-scheduler                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-session                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-staking                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-sudo                                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-timestamp                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-tips                                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-transaction-payment                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-treasury                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-utility                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-vesting                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-whitelist                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-xcm                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
parachain-info                             = { package = "staging-parachain-info", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
polkadot-core-primitives                   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
polkadot-parachain-primitives              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
polkadot-primitives                        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
polkadot-runtime-common                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
polkadot-runtime-parachains                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-api                                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-application-crypto                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-arithmetic                              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-authority-discovery                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-block-builder                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-blockchain                              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-consensus                               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-consensus-aura                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-consensus-slots                         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-consensus-beefy                         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-consensus-grandpa                       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-core                                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-core-hashing                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-debug-derive                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-externalities                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-inherents                               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-io                                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-keyring                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-keystore                                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-maybe-compressed-blob                   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-npos-elections                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-offchain                                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-panic-handler                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-runtime                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-runtime-interface                       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-session                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-staking                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-state-machine                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-std                                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-storage                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-timestamp                               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-tracing                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-transaction-pool                        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-trie                                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-version                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-wasm-interface                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-weights                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
substrate-fixed                            = { git = "https://github.com/encointer/substrate-fixed", default-features = false }
xcm                                        = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
xcm-builder                                = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
xcm-executor                               = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }

# polkadot-sdk (client)
cumulus-client-cli                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
cumulus-client-consensus-aura                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
cumulus-client-consensus-common               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
cumulus-client-consensus-relay-chain          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
cumulus-client-network                        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
cumulus-client-pov-recovery                   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
cumulus-client-service                        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
cumulus-relay-chain-inprocess-interface       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
cumulus-relay-chain-interface                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
cumulus-relay-chain-minimal-node              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
cumulus-relay-chain-rpc-interface             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
cumulus-test-relay-validation-worker-provider = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
frame-benchmarking-cli                        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
node-inspect                                  = { package = "staging-node-inspect", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
pallet-transaction-payment-rpc                = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
parachains-common                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
polkadot-cli                                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
polkadot-service                              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-basic-authorship                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-chain-spec                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-cli                                        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-client-api                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-consensus                                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-consensus-aura                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-consensus-grandpa                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-consensus-grandpa-rpc                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sc-consensus-manual-seal                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-consensus-beefy                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-consensus-beefy-rpc                        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-consensus-slots                            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-executor                                   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-keystore                                   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-network                                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-network-common                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-network-sync                               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-offchain                                   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-rpc                                        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-rpc-api                                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-rpc-server                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-service                                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-sysinfo                                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-telemetry                                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-tracing                                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-transaction-pool                           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sc-transaction-pool-api                       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
sp-consensus-babe                             = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
sp-rpc                                        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
substrate-build-script-utils                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
substrate-frame-rpc-system                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
substrate-prometheus-endpoint                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
substrate-test-utils                          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
substrate-wasm-builder                        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
try-runtime-cli                               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
xcm-emulator                                  = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }
xcm-simulator                                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0" }

# Other
anyhow                = { version = "1.0.65", default-features = false }
async-trait           = { version = "0.1.76", default-features = false }
bech32                = { version = "0.9.1" }
bip32                 = { version = "0.4.0" }
blake2-rfc            = { version = "0.2.18", default-features = false }
borsh                 = { version = "0.10.3", default-features = false }
bstringify            = { version = "0.1.2", default-features = false }
byteorder             = { version = "1.3.2", default-features = false }
bytes                 = { version = "1.1.0", default-features = false }
chrono                = { version = "0.4.19" }
ckb-merkle-mountain-range = { version = "0.3.2", default-features = false }
clap                  = { version = "4.4" }
cw-multi-test         = { version = "0.15.1" }
derive_more           = { version = "0.99.17", features = ["from"] }
digest                = { version = "0.10.3", default-features = false }
downcast-rs           = { version = "1.2.0" }
ed25519-zebra         = { version = "3.1.0", default-features = false }
env_logger            = { version = "0.10.2" }
ethabi                = { version = "18.0.0", default-features = false }
ethereum              = { version = "0.14.0", default-features = false, features = ["with-codec"] }
flex-error            = { version = "0.4.4", default-features = false }
futures               = { version = "0.3.30" }
hex                   = { version = "0.4.3", default-features = false }
hex-literal           = { version = "0.4.1", default-features = false }
hash-db               = { version = "0.16.0", default-features = false }
http                  = { version = "0.2.9" }
itertools             = { version = "0.10.5", default-features = false }
impl-trait-for-tuples = { version = "0.2.2", default-features = false }
jsonrpsee             = { version = "0.20.3", default-features = false }
jsonrpsee-core        = { version = "0.20.3", default-features = false }
jsonrpsee-ws-client   = { version = "0.20.3", default-features = false }
k256                  = { version = "0.11.6", features = ["ecdsa-core", "ecdsa", "sha256"] }
log                   = { version = "0.4.21", default-features = false }
modelator             = { version = "0.4.2" }
num-bigint            = { version = "0.4.3", default-features = false }
num-traits            = { version = "0.2.18", default-features = false }
parity-scale-codec    = { version = "3.6.5", default-features = false, features = ["derive"] }
paste                 = { version = "1.0.14", default-features = false }
prometheus            = { version = "0.13.0", default-features = false }
prost                 = { version = "0.11", default-features = false }
prost-types           = { version = "0.11", default-features = false }
prost-build           = { version = "0.11.1", default-features = false }
quick_cache           = { version = "0.3.0" }
rand                  = { version = "0.8.5" }
ripemd                = { version = "0.1.3" }
rs_merkle             = { version = "1.2.0" }
safe-regex            = { version = "0.2.5", default-features = false }
schemars              = { version = "0.8.10" }
serde                 = { version = "1.0.193", features = ["derive"], default-features = false }
serde_json            = { version = "1.0.109", default-features = false }
serde_derive          = { version = "1.0.104", default-features = false }
serde-json-wasm       = { version = "0.5.0", default-features = false }
sha2                  = { version = "0.10.2", default-features = false }
sha3                  = { version = "0.10.2", default-features = false }
similar-asserts       = { version = "1.1.0", default-features = false }
smallvec              = { version = "1.13.1", default-features = false }
ss58-registry         = { version = "1.28.0" }
static_assertions     = { version = "1.1.0", default-features = false }
strum                 = { version = "0.25.0", default-features = false, features = ["derive"] }
strum_macros          = { version = "0.25.3", default-features = false }
subtle-encoding       = { version = "0.5", default-features = false }
test-log              = { version = "0.2.10", features = ["trace"] }
time                  = { version = "0.3", default-features = false }
tiny-keccak           = { version = "2.0", features = ["fips202"] }
tiny-bip39            = { version = "1.0.0" }
thiserror             = { version = "1.0.31", default-features = false }
tokio                 = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream          = { version = "0.1.14", features = ["sync"]}
toml                  = { version = "0.7.3" }
tonic                 = { version = "0.8", features = ["tls", "tls-roots"] }
tracing               = { version = "0.1.34", default-features = false }
tracing-subscriber    = { version = "0.3.11", features = ["fmt", "env-filter", "json"]}
twox-hash             = { version = "1.6.3", default-features = false }
uint                  = { version = "0.9", default-features = false }

# Cosmwasm
cosmwasm-schema       = { version = "1.1.3" }
cosmwasm-std          = { version = "1.1.3" }
cw-storage-plus       = { version = "0.15.1" }


# Integration-tests
bp-messages                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
bridge-runtime-common           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
grandpa-primitives              = { package = "sp-consensus-grandpa", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-bridge-messages          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
pallet-asset-rate               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.0", default-features = false }
asset-hub-kusama-runtime        = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.2.5" }
asset-hub-polkadot-runtime      = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.2.5" }
bridge-hub-kusama-runtime       = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.2.5" }
bridge-hub-polkadot-runtime     = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.2.5" }
kusama-runtime                  = { package = "staging-kusama-runtime", git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.2.5" }
kusama-runtime-constants        = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.2.5" }
polkadot-runtime                = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.2.5" }
polkadot-runtime-constants      = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.2.5" }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }